# kalshiTradingBot

./: .env.example  .gitignore  pyproject.toml
.claude/: settings.local.json
config/: economic_calendar.py  fomc_calendar.py  settings.py
data/: consensus_client.py  fedwatch.py  finnhub_client.py  fred_client.py  kalshi_client.py  polymarket.py  twitter_sentiment.py
db/: database.py  schema.sql
deploy/: health_check.sh  rpi_setup.sh
execution/: order_manager.py  position_monitor.py  retry_handler.py
monitoring/: alerts.py  logger.py  pnl_tracker.py  telegram.py
scheduler/: job_scheduler.py
scripts/: check_setup.py  go_live.py  kill.sh  paper_test.py  resume.sh  run_bot.py  stats.py
signals/: macro_trend.py  probability_spread.py  signal_aggregator.py
strategy/: position_sizer.py  risk_manager.py  trade_decision.py
tests/: test_strategy.py
